# functional-programming-fall-2016

./: README.md
Lab1/: Input.hs  Lab1.hs
Lab2/: ChangeLog.md  LICENSE  TicTacToe.cabal
Lab2/app/: Main.hs
Lab2/src/TicTacToe/: Game.hs  Types.hs
Lab2/src/TicTacToe/Helpers/: Args.hs  Http.hs
Lab2/src/TicTacToe/MExpr/: Parser.hs  Serializer.hs
Lab2/test/: Spec.hs
